<resources>
    <string name="privacyonline_preferences">online.privacy.privacyonline.PREFERENCES</string>
    <string name="app_name">Privacy Online</string>
    <string name="app_name_full">Privacy Online for Android</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Privacy Online</string>
    <string name="privacy_online_signup">https://privacy.online/signup</string>
    <string name="settings_save">Save</string>
    <string name="credential_error">Incorrect Username or Password</string>
    <string name="about_heading_privacyonline">privacy.online is a UK2GROUP company</string>
    <string name="about_heading_openvpn_for_android">OpenVPN for Android</string>
    <string name="about_heading_openvpn">OpenVPN</string>
    <string name="about_heading_lzo">LZO</string>
    <string name="about_heading_openssl">OpenSSL</string>
    <string name="about_heading_bouncycastle">Bouncy Castle Crypto APIs</string>
    <string name="about_text_hsi_address">517 W. 100 N., Suite 225\nProvidence, UT 84332\nToll Free Phone: 800.222.2165\nInternational Phone: 435.755.3433\nFAX: 435.755.3449</string>
    <string name="about_text_sourcecode">The source code for Privacy Online for Android is freely available on <a href="https://github.com/UK2Group">GitHub</a>.</string>
    <string name="about_text_openvpn_for_android">Privacy Online for Android\'s OpenVPN back-end service code is based upon "OpenVPN for Android" by Arne Schwabe, in accordance with the GPLv2 Licensing. You can find his project on <a href="https://github.com/schwabe/ics-openvpn">GitHub</a>.</string>
    <string name="about_text_openvpn">Copyright &#169; 2002&#8211;2010 OpenVPN Technologies, Inc.\nOpenVPN is a trademark of OpenVPN Technologies, Inc.</string>
    <string name="about_text_lzo">Copyright &#169; 1996&#8211;2011 Markus Franz Xaver Johannes Oberhumer.</string>
    <string name="about_text_openssl">This product includes software developed by the OpenSSL Project for use\nin the OpenSSL Toolkit. Copyright &#169; 1995&#8211;2008 The OpenSSL Project. All rights reserved.\n\nThis product includes cryptographic software written by Eric Young Copyright &#169; 1995&#8211;1998 Eric Young. All rights reserved.</string>
    <string name="about_text_bouncycastle">Coptyright &#169; 2000&#8211;2012 The Legion Of The Bouncy Castle. (http://www.bouncycastle.org)</string>
    <string name="state_user_vpn_permission" translatable="false">Waiting for user permission to use VPN API</string>
    <string name="state_user_vpn_password" translatable="false">Waiting for user VPN password</string>
    <string name="state_user_vpn_password_cancelled" translatable="false">VPN password input dialog cancelled</string>
    <string name="state_user_vpn_permission_cancelled" translatable="false">VPN API permission dialog cancelled</string>
    <string name="opevpn_copyright" translatable="false">Copyright © 2002–2010 OpenVPN Technologies, Inc. &lt;sales@openvpn.net>\n"OpenVPN" is a trademark of OpenVPN Technologies, Inc.\n</string>
    <string name="defaultserver" translatable="false">openvpn.uni-paderborn.de</string>
    <string name="defaultport" translatable="false">1194</string>
    <string name="copyright_file_dialog" translatable="false">File Dialog based on work by Alexander Ponomarev</string>
    <string name="lzo_copyright" translatable="false">Copyright © 1996 – 2011 Markus Franz Xaver Johannes Oberhumer</string>
    <string name="copyright_openssl" translatable="false">        This product includes software developed by the OpenSSL Project for use in the OpenSSL Toolkit\n
        Copyright © 1998-2008 The OpenSSL Project. All rights reserved.\n\n
        \This product includes cryptographic software written by Eric Young (eay@cryptsoft.com)\n
        Copyright © 1995-1998 Eric Young (eay@cryptsoft.com) All rights reserved.</string>
    <string name="openvpn" translatable="false">OpenVPN</string>
    <string name="file_dialog" translatable="false">File Dialog</string>
    <string name="lzo" translatable="false">LZO</string>
    <string name="openssl" translatable="false">OpenSSL</string>
    <string name="unknown_state" translatable="false">Unknown state</string>
    <string name="bouncy_castle" translatable="false">Bouncy Castle Crypto APIs</string>
    <string name="copyright_bouncycastle" translatable="false">Copyright © 2000–2012 The Legion Of The Bouncy Castle (http://www.bouncycastle.org)</string>
    <string-array name="tls_directions_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>Unspecified</item>
    </string-array>
    <string-array name="crm_values" translatable="false">
        <item>1</item>
        <item>2</item>
        <item>5</item>
        <item>50</item>
        <item>-1</item>
    </string-array>
    <string name="crash_toast_text">Privacy Online for Android crashed, crash reported</string>
    <string name="app">Privacy Online for Android</string>
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">Unable to read directory</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="no_data">No Data</string>
    <string name="useLZO">LZO Compression</string>
    <string name="client_no_certificate">No Certificate</string>
    <string name="client_certificate_title">Client Certificate</string>
    <string name="client_key_title">Client Certificate Key</string>
    <string name="client_pkcs12_title">PKCS12 File</string>
    <string name="ca_title">CA Certificate</string>
    <string name="no_certificate">You must select a certificate</string>
    <string name="copyright_guicode">Source code and issue tracker available at https://github.com/schwabe/ics-openvpn/</string>
    <string name="copyright_others">This program uses the following components; see the source code for full details on the licenses</string>
    <string name="about">About</string>
    <string name="vpn_list_title">Profiles</string>
    <string name="vpn_type">Type</string>
    <string name="pkcs12pwquery">PKCS12 Password</string>
    <string name="file_select">Select…</string>
    <string name="file_nothing_selected">You must select a file</string>
    <string name="useTLSAuth">Use TLS Authentication</string>
    <string name="tls_direction">TLS Direction</string>
    <string name="ipv6_dialog_tile">Enter IPv6 Address/Netmask in CIDR Format (e.g. 2000:dd::23/64)</string>
    <string name="ipv4_dialog_title">Enter IPv4 Address/Netmask in CIDR Format (e.g. 1.2.3.4/24)</string>
    <string name="ipv4_address">IPv4 Address</string>
    <string name="ipv6_address">IPv6 Address</string>
    <string name="auth_username">Username</string>
    <string name="auth_pwquery">Password</string>
    <string name="static_keys_info">For the static configuration the TLS Auth Keys will be used as static keys</string>
    <string name="configure_the_vpn">Configure the VPN</string>
    <string name="menu_add_profile">Add Profile</string>
    <string name="add_profile_name_prompt">Enter a name identifying the new Profile</string>
    <string name="duplicate_profile_name">Please enter a unique Profile Name</string>
    <string name="profilename">Profile Name</string>
    <string name="no_keystore_cert_selected">You must select a User certificate</string>
    <string name="no_error_found">No error found</string>
    <string name="config_error_found">Error in Configuration</string>
    <string name="ipv4_format_error">Error parsing the IPv4 address</string>
    <string name="custom_route_format_error">Error parsing the custom routes</string>
    <string name="pw_query_hint">(leave empty to query on demand)</string>
    <string name="vpn_shortcut">Privacy Online Shortcut</string>
    <string name="vpn_launch_title">Connect to VPN</string>
    <string name="shortcut_profile_notfound">Profile specified in shortcut not found</string>
    <string name="random_host_prefix">Random Host Prefix</string>
    <string name="random_host_summary">Adds 6 random chars in front of hostname</string>
    <string name="custom_config_title">Enable Custom Options</string>
    <string name="custom_config_summary">Specify custom options. Use with care!</string>
    <string name="route_rejected">Route rejected by Android</string>
    <string name="cancel_connection">Disconnect</string>
    <string name="cancel_connection_long">Disconnect VPN</string>
    <string name="clear_log">clear log</string>
    <string name="title_cancel">Disconnect VPN</string>
    <string name="cancel_connection_query">Do you wish to disconnect the VPN, or cancel the connection attempt?</string>
    <string name="remove_vpn">Remove VPN</string>
    <string name="check_remote_tlscert">Checks whether the server uses a certificate with TLS Server extensions (&#8211;&#8211;remote&#8211;cert&#8211;tls server)</string>
    <string name="check_remote_tlscert_title">Expect TLS server certificate</string>
    <string name="remote_tlscn_check_summary">Checks the Remote Server Certificate Subject DN</string>
    <string name="remote_tlscn_check_title">Certificate Hostname Check</string>
    <string name="enter_tlscn_title">Remote certificate subject</string>
    <string name="tls_key_auth">Enables the TLS Key Authentication</string>
    <string name="tls_auth_file">TLS Auth File</string>
    <string name="pull_on_summary">Requests IP addresses, routes and timing options from the server.</string>
    <string name="pull_off_summary">No information is requested from the server. Settings need to be specified below.</string>
    <string name="use_pull">Pull Settings</string>
    <string name="dns">DNS</string>
    <string name="override_dns">Override DNS Settings by Server</string>
    <string name="dns_override_summary">Use your own DNS Servers</string>
    <string name="searchdomain">searchDomain</string>
    <string name="dns1_summary">DNS Server to be used.</string>
    <string name="dns_server">DNS Server</string>
    <string name="secondary_dns_message">Secondary DNS Server used if the normal DNS Server cannot be reached.</string>
    <string name="backup_dns">Backup DNS Server</string>
    <string name="ignored_pushed_routes">Ignore pushed routes</string>
    <string name="ignore_routes_summary">Ignore routed pushed by the server.</string>
    <string name="default_route_summary">Redirects all Traffic over the VPN</string>
    <string name="use_default_title">Use default Route</string>
    <string name="custom_route_message">Enter custom routes. Only enter destination in CIDR format. \"10.0.0.0/8 2002::/16\" would direct the networks 10.0.0.0/8 and 2002::/16 over the VPN.</string>
    <string name="custom_route_message_excluded">Routes that should NOT be routed over the VPN. Use the same syntax as for included routes.</string>
    <string name="custom_routes_title">Custom Routes</string>
    <string name="custom_routes_title_excluded">Excluded Networks</string>
    <string name="log_verbosity_level">Log verbosity level</string>
    <string name="float_summary">Allows authenticated packets from any IP</string>
    <string name="float_title">Allow floating server</string>
    <string name="custom_options_title">Custom Options</string>
    <string name="edit_vpn">Edit VPN Settings</string>
    <string name="remove_vpn_query">Remove the VPN Profile \'%s\'?</string>
    <string name="tun_error_helpful">On some custom ICS images the permission on /dev/tun might be wrong, or the tun module might be missing completely. For CM9 images try the fix ownership option under general settings</string>
    <string name="tun_open_error">Failed to open the tun interface</string>
    <string name="error">"Error: "</string>
    <string name="clear">Clear</string>
    <string name="last_openvpn_tun_config">Opening tun interface:</string>
</resources>