<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="online.privacy.privacyonline.AboutActivity"
    android:background="@color/about_background">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_logo"
            android:layout_marginBottom="@dimen/about_logo_margin_bottom"
            android:layout_marginTop="@dimen/about_logo_margin_top"
            android:src="@drawable/about_logo"
            android:scaleType="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app"
            android:id="@+id/about_subtitle"
            android:textSize="@dimen/about_subtitle_size"
            android:textColor="@color/about_subtitle"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Version: "
                android:id="@+id/about_label_version"
                android:textSize="@dimen/about_subtitle_size"
                android:textColor="@color/about_subtitle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/about_text_version"
                android:textSize="@dimen/about_subtitle_size"
                android:textColor="@color/about_subtitle"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:id="@+id/about_divider"
            android:background="@drawable/about_divider"
            android:layout_marginTop="@dimen/about_divider_margin_vertical"
            />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_gravity="center_horizontal"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/about_text_body_container"
                android:paddingTop="@dimen/about_text_body_container_padding_top"
                android:paddingBottom="@dimen/about_text_body_container_padding_bottom">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_heading_privacyonline"
                    android:text="@string/about_heading_privacyonline"
                    style="@style/AppTheme.aboutPageHeading"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_text_hsi_address"
                    android:text="@string/about_text_hsi_address"
                    style="@style/AppTheme.aboutPageText"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/about_text_sourcecode"
                    android:text="@string/about_text_sourcecode"
                    android:textIsSelectable="false"
                    style="@style/AppTheme.aboutPageText"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_heading_openvpn_for_android"
                    android:id="@+id/about_heading_openvpn_for_android"
                    style="@style/AppTheme.aboutPageHeading"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_text_openvpn_for_android"
                    android:id="@+id/about_text_openvpn_for_android"
                    style="@style/AppTheme.aboutPageText"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_heading_openvpn"
                    android:id="@+id/about_heading_openvpn"
                    style="@style/AppTheme.aboutPageHeading"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_text_openvpn"
                    android:id="@+id/about_text_openvpn"
                    style="@style/AppTheme.aboutPageText"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_heading_lzo"
                    android:id="@+id/about_heading_lzo"
                    style="@style/AppTheme.aboutPageHeading"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_text_lzo"
                    android:id="@+id/about_text_lzo"
                    style="@style/AppTheme.aboutPageText"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_heading_openssl"
                    android:id="@+id/about_heading_openssl"
                    style="@style/AppTheme.aboutPageHeading"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_text_openssl"
                    android:id="@+id/about_text_openssl"
                    style="@style/AppTheme.aboutPageText"/>

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_heading_bouncycastle"
                    android:id="@+id/about_heading_bouncycastle"
                    style="@style/AppTheme.aboutPageHeading"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/about_text_bouncycastle"
                    android:id="@+id/about_text_bouncycastle"
                    style="@style/AppTheme.aboutPageText"
                    android:autoLink="web"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</FrameLayout>
